fixed warnings #38