@@ -10,8 +10,8 @@ public class nilTest {
   @SuppressWarnings("static-method") @Test public  void testForgetting() {
     assertNull(nil.forgetting(Integer.valueOf(1), Integer.valueOf(2)));
     assertNull(nil.forgetting(Integer.valueOf(1), "abc"));
-    assertNull(nil.forgetting(Integer.valueOf(1), Double.valueOf(2.5), "abc", Arrays.asList(new Integer(1),
-        new Integer(2),new Integer(3))));
+    assertNull(nil.forgetting(Integer.valueOf(1), Double.valueOf(2.5), "abc", Arrays.asList(Integer.valueOf(1),
+        Integer.valueOf(2),Integer.valueOf(3))));
   }
 
   static String helperF(Integer i) {
